<resources>
    <string name="app_name">VChat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_msg">Don\'t have an account? Sign up</string>
    <string name="welcome_msg">Welcome back</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
</resources>